lib/mpv_bindings.dart


  /// Set an option. Note that you can't normally set options during runtime. It
  /// works in uninitialized state (see mpv_create()), and in some cases in at
  /// runtime.
  ///
  /// Using a format other than MPV_FORMAT_NODE is equivalent to constructing a
  /// mpv_node with the given format and data, and passing the mpv_node to this
  /// function.
  ///
  /// Note: this is semi-deprecated. For most purposes, this is not needed anymore.
  /// Starting with mpv version 0.21.0 (version 1.23) most options can be set
  /// with mpv_set_property() (and related functions), and even before
  /// mpv_initialize(). In some obscure corner cases, using this function
  /// to set options might still be required (see below, and also section
  /// "Inconsistencies between options and properties" on the manpage). Once
  /// these are resolved, the option setting functions might be fully
  /// deprecated.
  ///
  /// The following options still need to be set either _before_
  /// mpv_initialize() with mpv_set_property() (or related functions), or
  /// with mpv_set_option() (or related functions) at any time:
  /// - options shadowed by deprecated properties:
  /// - demuxer (property deprecated in 0.21.0)
  /// - idle (property deprecated in 0.21.0)
  /// - fps (property deprecated in 0.21.0)
  /// - cache (property deprecated in 0.21.0)
  /// - length (property deprecated in 0.10.0)
  /// - audio-samplerate (property deprecated in 0.10.0)
  /// - audio-channels (property deprecated in 0.10.0)
  /// - audio-format (property deprecated in 0.10.0)
  /// - deprecated options shadowed by properties:
  /// - chapter (option deprecated in 0.21.0)
  /// - playlist-pos (option deprecated in 0.21.0)
  /// The deprecated properties were removed in mpv 0.23.0.
  ///
  /// @param name Option name. This is the same as on the mpv command line, but
  /// without the leading "--".
  /// @param format see enum mpv_format.
  /// @param[in] data Option value (according to the format).
  /// @return error code
  int mpv_set_option(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
    int format,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _mpv_set_option(
      ctx,
      name,
      format,
      data,
    );
  }

  late final _mpv_set_optionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Pointer<ffi.Void>)>>('mpv_set_option');
  late final _mpv_set_option = _mpv_set_optionPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Void>)>();

  /// Convenience function to set an option to a string value. This is like
  /// calling mpv_set_option() with MPV_FORMAT_STRING.
  ///
  /// @return error code
  int mpv_set_option_string(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _mpv_set_option_string(
      ctx,
      name,
      data,
    );
  }

  late final _mpv_set_option_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('mpv_set_option_string');
  late final _mpv_set_option_string = _mpv_set_option_stringPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// Send a command to the player. Commands are the same as those used in
  /// input.conf, except that this function takes parameters in a pre-split
  /// form.
  ///
  /// The commands and their parameters are documented in input.rst.
  ///
  /// Does not use OSD and string expansion by default (unlike mpv_command_string()
  /// and input.conf).
  ///
  /// @param[in] args NULL-terminated list of strings. Usually, the first item
  /// is the command, and the following items are arguments.
  /// @return error code
  int mpv_command(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Pointer<ffi.Char>> args,
  ) {
    return _mpv_command(
      ctx,
      args,
    );
  }

  late final _mpv_commandPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('mpv_command');
  late final _mpv_command = _mpv_commandPtr.asFunction<
      int Function(
          ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Same as mpv_command(), but allows passing structured data in any format.
  /// In particular, calling mpv_command() is exactly like calling
  /// mpv_command_node() with the format set to MPV_FORMAT_NODE_ARRAY, and
  /// every arg passed in order as MPV_FORMAT_STRING.
  ///
  /// Does not use OSD and string expansion by default.
  ///
  /// The args argument can have one of the following formats:
  ///
  /// MPV_FORMAT_NODE_ARRAY:
  /// Positional arguments. Each entry is an argument using an arbitrary
  /// format (the format must be compatible to the used command). Usually,
  /// the first item is the command name (as MPV_FORMAT_STRING). The order
  /// of arguments is as documented in each command description.
  ///
  /// MPV_FORMAT_NODE_MAP:
  /// Named arguments. This requires at least an entry with the key "name"
  /// to be present, which must be a string, and contains the command name.
  /// The special entry "_flags" is optional, and if present, must be an
  /// array of strings, each being a command prefix to apply. All other
  /// entries are interpreted as arguments. They must use the argument names
  /// as documented in each command description. Some commands do not
  /// support named arguments at all, and must use MPV_FORMAT_NODE_ARRAY.
  ///
  /// @param[in] args mpv_node with format set to one of the values documented
  /// above (see there for details)
  /// @param[out] result Optional, pass NULL if unused. If not NULL, and if the
  /// function succeeds, this is set to command-specific return
  /// data. You must call mpv_free_node_contents() to free it
  /// (again, only if the command actually succeeds).
  /// Not many commands actually use this at all.
  /// @return error code (the result parameter is not set on error)
  int mpv_command_node(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<mpv_node> args,
    ffi.Pointer<mpv_node> result,
  ) {
    return _mpv_command_node(
      ctx,
      args,
      result,
    );
  }

  late final _mpv_command_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<mpv_node>,
              ffi.Pointer<mpv_node>)>>('mpv_command_node');
  late final _mpv_command_node = _mpv_command_nodePtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<mpv_node>,
          ffi.Pointer<mpv_node>)>();

  /// This is essentially identical to mpv_command() but it also returns a result.
  ///
  /// Does not use OSD and string expansion by default.
  ///
  /// @param[in] args NULL-terminated list of strings. Usually, the first item
  /// is the command, and the following items are arguments.
  /// @param[out] result Optional, pass NULL if unused. If not NULL, and if the
  /// function succeeds, this is set to command-specific return
  /// data. You must call mpv_free_node_contents() to free it
  /// (again, only if the command actually succeeds).
  /// Not many commands actually use this at all.
  /// @return error code (the result parameter is not set on error)
  int mpv_command_ret(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Pointer<ffi.Char>> args,
    ffi.Pointer<mpv_node> result,
  ) {
    return _mpv_command_ret(
      ctx,
      args,
      result,
    );
  }

  late final _mpv_command_retPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<mpv_node>)>>('mpv_command_ret');
  late final _mpv_command_ret = _mpv_command_retPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<mpv_node>)>();

  /// Same as mpv_command, but use input.conf parsing for splitting arguments.
  /// This is slightly simpler, but also more error prone, since arguments may
  /// need quoting/escaping.
  ///
  /// This also has OSD and string expansion enabled by default.
  int mpv_command_string(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> args,
  ) {
    return _mpv_command_string(
      ctx,
      args,
    );
  }

  late final _mpv_command_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_command_string');
  late final _mpv_command_string = _mpv_command_stringPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// Same as mpv_command, but run the command asynchronously.
  ///
  /// Commands are executed asynchronously. You will receive a
  /// MPV_EVENT_COMMAND_REPLY event. This event will also have an
  /// error code set if running the command failed. For commands that
  /// return data, the data is put into mpv_event_command.result.
  ///
  /// The only case when you do not receive an event is when the function call
  /// itself fails. This happens only if parsing the command itself (or otherwise
  /// validating it) fails, i.e. the return code of the API call is not 0 or
  /// positive.
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param reply_userdata the value mpv_event.reply_userdata of the reply will
  /// be set to (see section about asynchronous calls)
  /// @param args NULL-terminated list of strings (see mpv_command())
  /// @return error code (if parsing or queuing the command fails)
  int mpv_command_async(
    ffi.Pointer<mpv_handle> ctx,
    int reply_userdata,
    ffi.Pointer<ffi.Pointer<ffi.Char>> args,
  ) {
    return _mpv_command_async(
      ctx,
      reply_userdata,
      args,
    );
  }

  late final _mpv_command_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('mpv_command_async');
  late final _mpv_command_async = _mpv_command_asyncPtr.asFunction<
      int Function(
          ffi.Pointer<mpv_handle>, int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Same as mpv_command_node(), but run it asynchronously. Basically, this
  /// function is to mpv_command_node() what mpv_command_async() is to
  /// mpv_command().
  ///
  /// See mpv_command_async() for details.
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param reply_userdata the value mpv_event.reply_userdata of the reply will
  /// be set to (see section about asynchronous calls)
  /// @param args as in mpv_command_node()
  /// @return error code (if parsing or queuing the command fails)
  int mpv_command_node_async(
    ffi.Pointer<mpv_handle> ctx,
    int reply_userdata,
    ffi.Pointer<mpv_node> args,
  ) {
    return _mpv_command_node_async(
      ctx,
      reply_userdata,
      args,
    );
  }

  late final _mpv_command_node_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Int,
              ffi.Pointer<mpv_node>)>>('mpv_command_node_async');
  late final _mpv_command_node_async = _mpv_command_node_asyncPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, int, ffi.Pointer<mpv_node>)>();
